--- a/css/style.css
+++ b/css/style.css
@@ -46,12 +46,13 @@ body{
     column-gap: 118px;
 }
 
-}
+
 .link {
 font-size: 20px;
 font-weight: 800;
 color: #114455;
 }
+
 
 /*Button*/
 .btn {
@@ -134,22 +135,15 @@ position: relative;
     font-weight: 400;
     margin-bottom: 72px;
 }
-.header_btn {
-}
+
 .container-right{
     padding-left: calc((100% - 1750px)/2 + 15px);
 }
-/*SLIDER*/
-.container-right {
-}
-.slider {
-}
-.slider__item {
-}
+
+
 /*Slide*/
 .slide {
     position: relative;
-    background-color: red;
     padding-left: 80px;
 }
 .slide__title {
@@ -163,5 +157,92 @@ position: relative;
     -webkit-text-fill-color: transparent;
 
 }
-.slide__img {
+
+
+/*about*/
+.about {
+    padding: 144px 0;
+}
+
+.about__title {
+    margin-bottom: 12px;
+    max-width: 1070px;
+}
+
+.about__text {
+    max-width: 1070px;
+    margin-bottom: 78px;
+}
+
+
+/*video*/
+.video {
+    position: relative;
+  }
+
+.video-overlay::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    top 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(17, 68, 85, 0.5);
+
+}
+.vidio__btn {
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 9;
+}
+.video__picture {
+  
+    position: absolute;
+    left: 0%;
+    top: 0%;
+
+}
+
+
+.video__object {
+    width: 100%;
+    vertical-align: top;
+}
+
+
+.footer {
+    padding: 162px 0 82px;
+    font-size: 20px;
+    line-height: 36px;
+    letter-spacing: 0.04em;
+    color: #1F1F1F;
+    opacity: 0.7;
+}
+.footer a{
+    font-size: 20px;
+    line-height: 36px;
+    letter-spacing: 0.04em;
+    color: #1F1F1F;
+    opacity: 0.7;
+}
+.footer__row{
+    display: flex;
+    justify-content: space-between;
+}
+.footer__copyright {
+    opacity: 0.7;
+}
+.footer__nav {
+    display: flex;
+    column-gap: 104px;
+    
+}
+.footer__socials {
+    display: flex;
+    column-gap: 26px;
+
+}
+.footer_email {
 }
